module_vpc/igw.tf
resource "aws_internet_gateway" "internet_gateway" {
  vpc_id    = aws_vpc.this.id

  tags      = {
    Name    = "igw"
  }
}
